[package]
name = "rust_utils"
version = "1.0.0"
authors = ["Marc Mettke <marc@itmettke.de>"]

description = "Crate for various implementations of classes which cannot be found in the rust standard library"
homepage = "https://github.com/mettke/rust_utils"
readme = "README.md"
license = "MIT"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]

[dev-dependencies]
rand = "0.5"
